-. update kotlin version (1.1.1) -. update gradle version (3.5) -. remove assertj-core, use kotlin assertions